--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,18 @@
     },
     "tailwindCSS.includeLanguages": {
         "vue": "vue"
-    },
+	},
+	"vetur.format.options.tabSize": 2,
+  	"vetur.format.options.useTabs": false,
+	"vetur.format.defaultFormatter.html": "js-beautify-html",
+	"vetur.format.defaultFormatterOptions": {
+	"prettier": {
+		// Prettier option here
+		"semi": true,
+		"jsxBracketSameLine":true,
+	},
+	"js-beautify-html": {
+		"wrap_attributes": "aligned-multiple"
+	  }
+	}
 }
