--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.3.3",
+    "ant-design-vue": "^1.7.6",
     "axios": "^0.21.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10",
