--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.3.3",
-    "ant-design-vue": "^1.7.6",
+    "ant-design-vue": "^2.2.1",
     "axios": "^0.21.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10",
@@ -18,6 +18,7 @@
     "@vitejs/plugin-vue": "^1.2.4",
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^10.2.6",
+    "babel-plugin-import": "^1.13.3",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4",
     "vite": "^2.4.0"
