--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@vitejs/plugin-vue": "^1.2.4",
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^10.2.6",
-    "babel-plugin-import": "^1.13.3",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4",
-    "vite": "^2.4.0"
+    "vite": "^2.4.0",
+    "vite-plugin-components": "^0.12.2"
   }
 }
