--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@tailwindcss/forms": "^0.3.3",
     "ant-design-vue": "^2.2.1",
     "axios": "^0.21.1",
+    "less-vars-to-js": "^1.3.0",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10",
     "vuex": "^4.0.2"
@@ -19,7 +20,6 @@
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^10.2.6",
     "less": "^4.1.1",
-    "less-loader": "^10.0.1",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4",
     "vite": "^2.4.0",
