--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@tailwindcss/forms": "^0.3.3",
     "ant-design-vue": "^2.2.1",
     "axios": "^0.21.1",
+    "element-plus": "^1.0.2-beta.55",
     "less-vars-to-js": "^1.3.0",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10",
@@ -19,10 +20,14 @@
     "@vitejs/plugin-vue": "^1.2.4",
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^10.2.6",
+    "install": "^0.13.0",
     "less": "^4.1.1",
+    "npm": "^7.19.1",
     "postcss": "^8.3.5",
+    "sass": "^1.35.2",
     "tailwindcss": "^2.2.4",
     "vite": "^2.4.0",
-    "vite-plugin-components": "^0.12.2"
+    "vite-plugin-components": "^0.12.2",
+    "vite-plugin-style-import": "^1.0.1"
   }
 }
