--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.21.1",
     "element-plus": "^1.0.2-beta.55",
     "less-vars-to-js": "^1.3.0",
+    "showdown": "^1.9.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10",
+    "vue-showdown": "^3.1.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
