--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "ant-design-vue": "^2.2.1",
     "axios": "^0.21.1",
     "element-plus": "^1.0.2-beta.55",
+    "generate-avatar": "^1.4.10",
+    "js-md5": "^0.7.3",
     "less-vars-to-js": "^1.3.0",
     "showdown": "^1.9.1",
     "vue": "^3.0.5",
