--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "element-plus": "^1.0.2-beta.55",
     "js-md5": "^0.7.3",
     "showdown": "^1.9.1",
+    "showdown-highlight": "^2.1.8",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10",
     "vue-showdown": "^3.1.0",
