--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+   "postinstall": "patch-package" 
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.3.3",
     "axios": "^0.21.1",
     "element-plus": "^1.0.2-beta.55",
     "js-md5": "^0.7.3",
+    "patch-package": "^6.4.7",
     "showdown": "^1.9.1",
     "showdown-highlight": "^2.1.8",
     "vue": "^3.0.5",
